# dostoevsky-v0

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/config/: settings.py
src/image/: generator.py
src/pipeline/: orchestrator.py  test_runner.py
src/speech/: synthesizer_chattts.py  synthesizer_tts.py
src/text/: generator.py
src/utils/: logger.py
src/video/: compositor.py
